Fixing overflow

--- a/app/styles/modules/_product.scss
+++ b/app/styles/modules/_product.scss
@@ -189,7 +189,7 @@
   .product-title {
     @extend .text-medium;
     font-weight: 200;
-    max-width: 272px;
+    max-width: 265px;
     text-transform: uppercase;
   }
   
