--- a/app/styles/screen.css
+++ b/app/styles/screen.css
@@ -3224,7 +3224,7 @@ textarea {
 /* line 189, modules/_product.scss */
 .product-details .product-title {
   font-weight: 200;
-  max-width: 272px;
+  max-width: 265px;
   text-transform: uppercase;
 }
 /* line 196, modules/_product.scss */
